# histology-ai-classification

./: .gitignore  CLASS_IMBALANCE_IMPLEMENTATION_REPORT.md  EXPERIMENT_A_RICH_AUGMENTATION_REPORT.md  EXPERIMENT_B_ARTICLE_HEAD_REPORT.md  EXPERIMENT_C_SELECTIVE_UNFREEZING_REPORT.md  EXPERIMENT_D_RICH_AUG_ARTICLE_HEAD_REPORT.md  EXPERIMENT_E1_REGULARIZED_CRT_REPORT.md  PRE_TRAINING_VERIFICATION_REPORT.md  PROJECT_AUDIT_REPORT.md  PROJECT_CLEANUP_REPORT.md  README.md  current_tree.txt  pyproject.toml  requirements-colab.txt  requirements.txt  tree_after.txt  update_nb_e1.py
api/: README.md
configs/: README.md  common.yaml  config.example.yaml  densenet121.yaml  logging.yaml  resnet50v2.yaml
configs/experiments/: densenet121_exp_a_rich_augmentation.yaml  densenet121_exp_b_article_head.yaml  densenet121_exp_c_selective_unfreezing.yaml  densenet121_exp_d_rich_aug_article_head.yaml  densenet121_exp_e1_regularized_crt.yaml
data/: README.md
data/augmented/: README.md
data/manifests/: class_mapping.json  densenet121_folds.csv  original_22_dataset_manifest.csv
data/processed/: README.md
data/raw/: README.md
docs/: README.md  architecture.md  architecture_guide.md  colab_training.md  data_dictionary.md  dataset.md  methodology.md  project_guide.md
experiments/: README.md  experiment_tracking.md
mobile/: README.md
models/checkpoints/: README.md
models/exports/: README.md
models/saved/: README.md
notebooks/: README.md
notebooks/colab/: 00_setup_and_dataset_audit.ipynb  01_dataset_preparation.ipynb  02_train_densenet121.ipynb
reports/: README.md
reports/figures/: README.md
reports/metrics/: README.md
scripts/: create_original_22_class_dataset.py  evaluate_densenet121_tta.py  prepare_data.py
src/: __init__.py
src/callbacks/: __init__.py  csv_logger.py  early_stopping.py  model_checkpoint.py  tensorboard.py
src/data/: __init__.py  audit.py  augmentation.py  build_manifest.py  create_folds.py  data_validator.py  dataset_loader.py  explore_dataset.py  pipeline.py  (+2 more)
tests/: __init__.py  test_class_weights.py  test_config.py  test_data_manifest.py  test_exp_d.py  test_exp_e1.py  test_fine_tuning.py  test_folds.py  test_manifest.py  test_model_head.py  test_nuinsseg_migration.py  test_pipeline_augmentation.py  test_pipeline_paths.py  test_project_structure.py  test_real_folds_manifest.py  test_tta_evaluation.py
(+33 files in other folders)
